# tots-iridium-sbd-parser

./: README.md  pyproject.toml  setup.cfg
sbd/: __init__.py  cli.py  sbd.py
testdata/: 300434064056620_000105.sbd  300434064056620_000107.sbd  300434064056620_000117.sbd  300434064056620_000118.sbd  300434064056620_000119.sbd  300434064056620_000120.sbd  300434064056620_000121.sbd  300434064056620_000122.sbd  300434064057360_000053.sbd  300434064057360_000061.sbd  300434064057360_000062.sbd  300434064057360_000063.sbd  300434064057360_000064.sbd  300434064057360_000065.sbd  300434064057360_000066.sbd  300434064057360_000067.sbd  300434064949430_000063.sbd  300434064949430_000064.sbd  all_reports.csv  reports_6620.csv  reports_7360.csv  reports_9430.csv
tots_sbd_decode/: cli.py  cli_report.py  parse.py
