[tool.poetry]
name = "tots-iridium-sbd-parser"
version = "0.0.14"
description = "Parsing of Iridium SBD MO files for ToTS sediment traps"
authors = ["Ethan Li <lietk12@gmail.com>"]
license = "BSD"
readme = "README.md"
packages = [{include = "sbd"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
tots-sbd-decode = 'sbd.cli:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
