[tool.poetry]
name = "tots-iridium-sbd-parser"
version = "0.0.15"
description = "Parsing of Iridium SBD MO files for ToTS sediment traps"
authors = ["Ethan Li <lietk12@gmail.com>"]
license = "(Apache-2.0 OR BlueOak-1.0.0)"
readme = "README.md"
packages = [{include = "tots_sbd_decode"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
tots-sbd-decode = 'tots_sbd_decode.cli:main'
tots-report-decode = 'tots_sbd_decode.cli_report:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
